// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentItemName should intially render with content item id 1`] = `
<div>
  
  <span>
    0f590113-9733-4446-abcd-a103d17a2063
  </span>
</div>
`;

exports[`ContentItemName should render a link and resolve a content item label if locationHref is available 1`] = `
<div>
  <a
    class="svelte-1c0jp0i"
    href="http://example.com/#!/undefined/authoring/content-item/edit/0f590113-9733-4446-abcd-a103d17a2063"
    target="_self"
  >
    <span>
      test-content-item-label
    </span>
  </a>
  
  
</div>
`;

exports[`ContentItemName should render and resolve a content item label 1`] = `
<div>
  <span>
    test-content-item-label
  </span>
  
  
</div>
`;
